compiler/weave_syntax/tests/data/syntax/declarations/enum-0002.error
error: Unexpected tokens
        --> <source>:28:5
         |
      28 |     public function Foo() -> bool { return true; }
         |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:31:11
         |
      31 |     Value2,
         |           ^
      32 |     // Maybe enum cases should be introduced by a keyword, like `case`?
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      33 | }
         | ^
